# Rustino

./: .gitignore  AI_PROMPT.md  Cargo.toml  Modelfile  Modelfile_old  laze-project.yml  Контекст.txt
ariel_school/: Cargo.toml
ariel_school/src/: lib.rs
ariel_school_macros/: Cargo.toml
ariel_school_macros/src/: lib.rs
school_ide/: Cargo.toml
school_ide/src/: main.rs
src/: main.rs
