[package]
name = "school_ide"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui_extras = { version = "0.29", features = ["syntect"] }

# ИСПРАВЛЕНО: Убираем "blocking", добавляем асинхронность и tokio
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
